<resources>
    <string name="app_name2">iGoSafe</string>
    <string name="codigo">AIzaSyAuWtO-Xpq5v8dQTIQZTLs4QgJu4DQ6eVw</string>
    <string name="celular">Número de celular registrado</string>
    <string name="contraseña">Contraseña</string>
    <string name="olvidarContraseña"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="cuenta">¿No tienes una cuenta?</string>
    <string name="comienza">Comienza a usar iGoSafe</string>
    <string name="cuentaExiste">¿Ya tienes una cuenta?</string>
    <string name="iniciaSesion">Inicia sesión</string>
    <string name="volverEnviarCodigo"><u>¿No recibiste un código? Volver a enviar</u></string>
    <string name="regisContrasena">Contraseña</string>
    <string name="confirContrasena">Confirmar contraseña</string>
    <string name="infoContrasena">La contraseña debeser de al menos 6 caracteres. Debe incluir mayúsculas, minúsculas, números y caracteres especiales.</string>
    <string name="numDocumento">Número de documento</string>
    <string name="creaPerfil">Crea tu perfil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Title</string>
    <string name="nav_header_subtitle">iGoSafe</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="comentarioOrigen">Tu ubicación</string>
    <string name="comentarioDestino">¿A quién visitarás hoy?</string>
    <string name="apodo">Apodo</string>
    <string name="nombreCompleto">Nombre completo</string>
    <string name="formaViaje">Elige la forma en la que te gustaria viajar</string>
    <string name="verComentarios"><u>Ver comentarios</u></string>

    <string name="menu_planear_viaje">Planea tu viaje</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_contactos">Contactos</string>
    <string name="menu_premium">Adquiere iGoSafer</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="default_web_client_id">371704711119-tpiktdm5u5659egicchpaq5fgqmv0dgv.apps.googleusercontent.com</string>
</resources>