<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_viaje"
            android:icon="@drawable/ic_travel"
            android:title="@string/menu_planear_viaje"/>
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favoritos" />
        <item
            android:id="@+id/nav_contactos"
            android:icon="@drawable/ic_contacts"
            android:title="@string/menu_contactos" />

        <item
            android:id="@+id/nav_premium"
            android:icon="@drawable/ic_important"
            android:title="@string/menu_premium" />

        <item
            android:id="@+id/cerrar_sesion"
            android:icon="@drawable/ic_close"
            android:title="Cerrar sesion" />

    </group>
</menu>