<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="@color/azul4">

    <ImageView
        android:id="@+id/logoGris"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/celular"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/white"
        android:hint="@string/celular"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoGris" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/notification_border"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/registrarContrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/celular"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/iconoAdvertencia"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_info" />

        <TextView
            android:id="@+id/textoMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/roboto"
            android:text="@string/infoContrasena"
            android:textColor="@color/verde" />

    </LinearLayout>

    <EditText
        android:id="@+id/registrarContrasena"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="152dp"
        android:backgroundTint="@color/azul1"
        android:hint="@string/regisContrasena"
        android:textColor="@color/white"
        android:textColorHint="@color/azul1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/celular" />

    <!-- Botón corregido con constraints -->

    <EditText
        android:id="@+id/confirmarContrasena"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/azul1"
        android:hint="@string/confirContrasena"
        android:textColor="@color/white"
        android:textColorHint="@color/azul1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrarContrasena" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/verde"
        android:text="REGISTRARSE"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmarContrasena"
        app:layout_constraintVertical_bias="0.543" />

</androidx.constraintlayout.widget.ConstraintLayout>

